gcc/testsuite/g++.dg/cpp0x/alignas24.C
// PR c++/124307
// { dg-do compile { target c++11 } }
// { dg-options "" }

class : alignas // { dg-error "" }
